Fix layout issues around app-info and image-preview

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -20,6 +20,8 @@ html {
 span {
   &.app-status {
     display: inline-block;
+    text-align: center;
+    width: 84px;
     border: 1px solid;
     border-radius: 3px;
     padding: 5px 10px;
@@ -39,10 +41,30 @@ span {
   }
 }
 
+.app-info {
+  .dropdown-icon {
+    float: left;
+    margin-top: 11px;
+  }
+
+  .app-info-header {
+    .app-name {
+      vertical-align: top;
+      margin-top: 20px;
+      display:  inline-block;
+    }
+  }
+
+  .app-info-controls {
+    float: right;
+    margin-top: 12px;
+  }
+}
+
 .image-preview {
   width: 50px;
   height: 50px;
-  position: fixed;
+  display: inline-block;
   text-align: center;
   margin: 3px;
   border: 1px solid lightgrey;
@@ -50,26 +72,24 @@ span {
   overflow: hidden;
 
   .glyphicon {
+    display: inline-block;
     font-size: 40px;
-    line-height: 50px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
+    line-height: 45px;
     height: 100%;
     width: auto;
-    transform: translate(-50%, -50%);
   }
 
-  img  {
-    position: absolute;
-    left: 50%;
-    top: 50%;
+  img {
+    width: 100%;
     height: 100%;
-    width: auto;
-    transform: translate(-50%, -50%);
+    object-fit: cover;
   }
 }
 
+#upload-image {
+  margin-top:  4px;
+  margin-left:  10px;
+}
 
 .glyphicon-spin {
     -webkit-animation: spin 1000ms infinite linear;
